--- a/tests/navidrome.conf
+++ b/tests/navidrome.conf
@@ -1,10 +1,10 @@
 ENABLED=true
-RELEASE="bookworm:noble"
+RELEASE="noble"
+TESTNAME="Navidrome install"
 
 testcase() {(
 	set -e
 	./bin/armbian-config --api module_navidrome remove
 	./bin/armbian-config --api module_navidrome install
-	container=$(docker container ls -a | mawk '/navidrome?( |$)/{print $1}')
-	[[ -n "$container" ]]
+	./bin/armbian-config --api module_navidrome status
 )}
