--- a/tests/portainer.conf
+++ b/tests/portainer.conf
@@ -1,8 +1,10 @@
 ENABLED=true
-RELEASE="bookworm:noble"
+RELEASE="noble"
+TESTNAME="Portainer install"
 
 testcase() {(
 	set -e
+	./bin/armbian-config --api module_portainer remove
 	./bin/armbian-config --api module_portainer install
 	./bin/armbian-config --api module_portainer status
 )}
