changed ouptut to mach testcase expectations and ux info

--- a/tests/samba.conf
+++ b/tests/samba.conf
@@ -5,7 +5,7 @@ TESTNAME="samba install"
 testcase() {(
 	set -e
 	./bin/armbian-config --api module_samba install
-	sudo systemctl start smbd.service
-	sudo systemctl is-active --quiet smbd.service
+	./bin/armbian-config --api module_samba start
+	./bin/armbian-config --api module_samba check >/dev/null 2>&1
 	./bin/armbian-config --api module_samba remove
 )}
