Move desktop install method to APA
https://github.com/armbian/apa

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -334,7 +334,7 @@
                 {
                     "id": "Desktops",
                     "description": "Desktop Environments",
-                    "status": "Disabled",
+                    "status": "Enabled",
                     "sub": [
                         {
                             "id": "XFCE",
