modified:   tools/json/config.software.json 	modified:   tools/modules/software/module_apt_browsers.sh

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -5,6 +5,62 @@
             "description": "Run/Install 3rd party applications",
             "sub": [
                 {
+                    "id": "Browsers",
+                    "description": "Web Browsers",
+                    "sub": [
+                        {
+                            "id": "BRS001",
+                            "description": "Install Mozilla Firefox web browser (ESR)",
+                            "command": [
+                                "pkg_install firefox-esr"
+                            ],
+                            "status": "Stable",
+                            "author": "@Tearran",
+                            "condition": "! pkg_installed firefox-esr"
+                        },
+                        {
+                            "id": "BRS002",
+                            "description": "Remove Mozilla Firefox web browser (ESR)",
+                            "command": [
+                                "pkg_remove firefox-esr"
+                            ],
+                            "status": "Stable",
+                            "author": "@Tearran",
+                            "condition": "pkg_installed firefox-esr"
+                        },
+                        {
+                            "id": "BRS003",
+                            "description": "Install Chromium web browser",
+                            "command": [
+                                "pkg_install chromium"
+                            ],
+                            "status": "Stable",
+                            "author": "@Tearran",
+                            "condition": "! pkg_installed chromium"
+                        },
+                        {
+                            "id": "BRS003",
+                            "description": "Remove Chromium web browser",
+                            "command": [
+                                "pkg_remove chromium "
+                            ],
+                            "status": "Stable",
+                            "author": "@Tearran",
+                            "condition": "pkg_installed chromium"
+                        },
+                        {
+                            "id": "BRS004",
+                            "description": "Add/Remove multible web browsers",
+                            "command": [
+                                "_checklist_browsers"
+                            ],
+                            "status": "Stable",
+                            "author": "@Tearran",
+                            "condition": ""
+                        }
+                    ]
+                },
+                {
                     "id": "WebHosting",
                     "description": "Web server, LEMP, reverse proxy, Let's Encrypt SSL",
                     "status": "Stable",
