--- a/tests/Browsers.conf
+++ b/tests/Browsers.conf
@@ -4,5 +4,5 @@ TESTNAME="Manage Browsers apt"
 
 testcase() {(
 	set -e
-	$(./bin/armbian-config --api _checklist_browsers test || exit 1 )
+	./bin/armbian-config --api _checklist_browsers test || exit 1
 )}
